continued html and css code

--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>ohmyfood</title>
 </head>
 <body>
-    <h1>hi foodies</h1>
+    <header>
+        <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
+    </header>   
+    <div class="main">
+        <div class="main__location">
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <p>Paris, Belleville</p>
+        </div>
+        <div class="main main__explore">
+            <h3>Book the menu you like</h3>
+            <p>Discover top-of-the-art restaurants we picked for you</p>
+            <button class="btn"> Explore our restaurants</button>
+        </div>
+    </div>
+    <div class="main main__guide">
+        <div class="step">
+            <p>1</p>
+            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <p>Choose a restaurant</p>
+        </div>
+        <div class="step">
+            <p>2</p>
+            <i class="fa fa-list" aria-hidden="true"></i>
+            <p>Create your menu</p>
+        </div>
+        <div class="step">
+            <p>3</p>
+            <i class="fa fa-cutlery" aria-hidden="true"></i>
+            <p>Go enjoy it at the restaurant</p>
+        </div>
+    </div>
 </body>
 </html>
