--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <header>
         <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
     </header>   
-    <div class="main">
-        <div class="main__location">
+    <section class="section">
+        <div class="section__location">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
         <p>Paris, Belleville</p>
         </div>
-        <div class="main main__explore">
+        <div class="section__explore">
             <h3>Book the menu you like</h3>
             <p>Discover top-of-the-art restaurants we picked for you</p>
             <button class="btn"> Explore our restaurants</button>
         </div>
-    </div>
-    <div class="main main__guide">
+    </section>
+    <section class="section__guide">
+        <h3>How it works</h3>
         <div class="step">
             <p>1</p>
             <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -42,6 +43,59 @@
             <i class="fa fa-cutlery" aria-hidden="true"></i>
             <p>Go enjoy it at the restaurant</p>
         </div>
-    </div>
+    </section>
+    <main>
+        <h3>Restaurants</h3>
+        <div class="restaurant">
+            <img src="/ohmyfood-files/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="meal">
+            <h4>The Full Palette</h4>
+            <p>New York</p>
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <span>New</span>
+        </div>
+        <div class="restaurant">
+            <img src="/ohmyfood-files/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="meal">
+            <h4>The Enchanted Plate</h4>
+            <p>New York</p>
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <span>New</span>
+        </div>
+        <div class="restaurant">
+            <img src="/ohmyfood-files/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="meal">
+            <h4>Bastille</h4>
+            <p>New York</p>
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+        </div>
+        <div class="restaurant">
+            <img src="/ohmyfood-files/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="meal">
+            <h4>Le Gourmand</h4>
+            <p>New York</p>
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+        </div>
+    </main>
+    <footer>
+        <span>ohmyfood</span>
+        <ul>
+            <li>
+                <a href="#"> 
+                <i class="fa fa-cutlery" aria-hidden="true"></i>
+                <span>Suggest a restaurant</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                <span>Become a partner</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">Legal</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+        
+    </footer>
 </body>
 </html>
