--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>ohmyfood</title>
 </head>
@@ -46,32 +46,32 @@
     </section>
     <main>
         <h3>Restaurants</h3>
-        <div class="restaurant">
+        <a href="the_full_palette.html" class="restaurant">
             <img src="/ohmyfood-files/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="meal">
             <h4>The Full Palette</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
             <span>New</span>
-        </div>
-        <div class="restaurant">
+        </a>
+        <a href="the_enchanted_plate.html" class="restaurant">
             <img src="/ohmyfood-files/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="meal">
             <h4>The Enchanted Plate</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
             <span>New</span>
-        </div>
-        <div class="restaurant">
+        </a>
+        <a href="bastille.html" class="restaurant">
             <img src="/ohmyfood-files/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="meal">
             <h4>Bastille</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </div>
-        <div class="restaurant">
+        </a>
+        <a href="le_gourmand.html" class="restaurant">
             <img src="/ohmyfood-files/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="meal">
             <h4>Le Gourmand</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </div>
+        </a>
     </main>
     <footer>
         <span>ohmyfood</span>
