completed HTML, homepage spinner, like button fill up and device responsiness needs to be done on CSS

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <h4>The Full Palette</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <!-- <i class="fa fa-heart" aria-hidden="true"></i> -->
             <span>New</span>
         </a>
         <a href="the_enchanted_plate.html" class="restaurant">
@@ -73,6 +74,7 @@
             <i class="fa fa-heart-o" aria-hidden="true"></i>
         </a>
     </main>
+    <!-- <div class="loader"></div> -->
     <footer>
         <span>ohmyfood</span>
         <ul>
@@ -92,7 +94,7 @@
                 <a href="#">Legal</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="mailto:someone@example.com">Contact</a>
             </li>
         </ul>
         
