--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -16,50 +16,77 @@
         <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
         <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
     </header>   
-    <section class="menu-img">
+    <div class="menu-img">
         <img src="/ohmyfood-files/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="meal">
-    </section>
+    </div>
     <main class="menu">
         <h2>Le Gourmand</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
         <p class="category">ENTREES</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Tuna Carpaccio</h4>
-            <p>Seasonend with yuzu</p><span>25€</span>
+            <p>Seasonend with yuzu</p><span class="price">25€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Crunchy Lobster Croquets</h4>
-            <p>With seasonal vegetables</p><span>35€</span>
+            <p>With seasonal vegetables</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Mushroom soup</h4>
-            <p>With truffles</p><span>20€</span>
+            <p>With truffles</p><span class="price">20€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">MAIN DISH</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Roast Chicken with Provincal Herbs</h4>
-            <p>With truffle cream</p><span>40€</span>
+            <p>With truffle cream</p><span class="price">40€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Roasted Lobster</h4>
-            <p>With seasonal vegetables</p><span>35€</span>
+            <p>With seasonal vegetables</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Angus Beef Ribs</h4>
-            <p>With mashed parsnips</p><span>44€</span>
+            <p>With mashed parsnips</p><span class="price">44€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">DESSERTS</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Assorted Dessert Plate</h4>
-            <p>Chef's choice</p><span>18€</span>
+            <p>Chef's choice</p><span class="price">18€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Creme brulee</h4>
-            <p>Revisited</p><span>22€</span>
+            <p>Revisited</p><span class="price">22€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Tiramisu</h4>
-            <p>With hazelnuts</p><span>23€</span>
+            <p>With hazelnuts</p><span class="price">23€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <button class="btn">Order</button>
     </main>
@@ -84,7 +111,7 @@
                 <a href="#">Legal</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="mailto:someone@example.com">Contact</a>
             </li>
         </ul>
         
