--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -16,54 +16,84 @@
         <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
         <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
     </header>   
-    <section class="menu-img">
+    <div class="menu-img">
         <img src="/ohmyfood-files/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="meal">
-    </section>
+    </div>
     <main class="menu">
         <h2>The Enchanted Plate</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
         <p class="category">ENTREES</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Foie Gras Ravioli</h4>
-            <p>With truffle cream</p><span>25€</span>
+            <p>With truffle cream</p><span class="price">25€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Oscietra Caviar</h4>
-            <p>With buckwheat blinis</p><span>35€</span>
+            <p>With buckwheat blinis</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Lobster and Leek Foam</h4>
-            <p>Marinated with orange zest</p><span>20€</span>
+            <p>Marinated with orange zest</p><span class="price">20€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__4">
             <h4>Duck Foie Gras</h4>
-            <p>With fig jam and grilled baguette</p><span>35€</span>
+            <p>With fig jam and grilled baguette</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">MAIN DISH</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Fresh Buttered Scallops</h4>
-            <p>With white celery puree</p><span>40€</span>
+            <p>With white celery puree</p><span class="price">40€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Pan-Fried Lobster</h4>
-            <p>With mashed sweet potatoes</p><span>35€</span>
+            <p>With mashed sweet potatoes</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Braised Ox Tail</h4>
-            <p>With wild rice and lemon zest</p><span>44€</span>
+            <p>With wild rice and lemon zest</p><span class="price">44€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">DESSERTS</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Chocolate and Hazelnut Macaroon</h4>
-            <p>With caramel butter ice cream</p><span>18€</span>
+            <p>With caramel butter ice cream</p><span class="price">18€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Baba au rhum</h4>
-            <p>With lemon drizzle</p><span>22€</span>
+            <p>With lemon drizzle</p><span class="price">22€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Lemon Meringue Pie</h4>
-            <p>Destructed</p><span>23€</span>
+            <p>Destructed</p><span class="price">23€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <button class="btn">Order</button>
     </main>
@@ -88,7 +118,7 @@
                 <a href="#">Legal</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="mailto:someone@example.com">Contact</a>
             </li>
         </ul>
         
