--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -16,50 +16,77 @@
         <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
         <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
     </header>   
-    <section class="menu-img">
+    <div class="menu-img">
         <img src="/ohmyfood-files/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="meal">
-    </section>
+    </div>
     <main class="menu">
         <h2>The Full Palette</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
         <p class="category">ENTREES</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Escargot</h4>
-            <p>With southern French spices</p><span>25€</span>
+            <p>With southern French spices</p><span class="price">25€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Duck Foie Gras</h4>
-            <p>With black truffle shavings</p><span>35€</span>
+            <p>With black truffle shavings</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Fried egg</h4>
-            <p>Seasonned with truffle cream annd vegetable</p><span>20€</span>
+            <p>Seasonned with truffle cream annd vegetable</p><span class="price">20€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">MAIN DISH</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Herb-Encrusted Steak</h4>
-            <p>With delicately sliced and seasoned vegetable</p><span>40€</span>
+            <p>With delicately sliced and seasoned vegetable<p><span class="price">40€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Ox Tail Shepard's Pie</h4>
-            <p>With black truffle and pureed parsnips</p><span>35€</span>
+            <p>With black truffle and pureed parsnips</p><span class="price">35€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Filet of Sole</h4>
-            <p>With citrus dressing</p><span>44€</span>
+            <p>With citrus dressing</p><span class="price">44€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <p class="category">DESSERTS</p>
-        <div class="menu__items">
+        <div class="menu__items item__1">
             <h4>Paris-Brest</h4>
-            <p>Revisted</p><span>18€</span>
+            <p>Revisted</p><span class="price">18€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__2">
             <h4>Chocolate Macaroons</h4>
-            <p>With vanilla ice cream</p><span>22€</span>
+            <p>With vanilla ice cream</p><span class="price">22€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
-        <div class="menu__items">
+        <div class="menu__items item__3">
             <h4>Chocolate Mousse</h4>
-            <p>With spices and black truffle</p><span>23€</span>
+            <p>With spices and black truffle</p><span class="price">23€</span>
+            <div class="tick">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </div>
         </div>
         <button class="btn">Order</button>
     </main>
@@ -84,7 +111,7 @@
                 <a href="#">Legal</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="mailto:someone@example.com">Contact</a>
             </li>
         </ul>
         
