Completed HTML and CSS with all requirements

--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -22,66 +22,67 @@
     <main class="menu">
         <h2>Le Gourmand</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
-        <p class="category">ENTREES</p>
-        <div class="menu__items item__1">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <p class="category category__1">ENTREES</p>
+        <div class="menu__items item__1 item__a">
             <h4>Tuna Carpaccio</h4>
             <p>Seasonend with yuzu</p><span class="price">25€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__b">
             <h4>Crunchy Lobster Croquets</h4>
             <p>With seasonal vegetables</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__c">
             <h4>Mushroom soup</h4>
             <p>With truffles</p><span class="price">20€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">MAIN DISH</p>
-        <div class="menu__items item__1">
+        <p class="category category__2">MAIN DISH</p>
+        <div class="menu__items item__1 item__d">
             <h4>Roast Chicken with Provincal Herbs</h4>
             <p>With truffle cream</p><span class="price">40€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__e">
             <h4>Roasted Lobster</h4>
             <p>With seasonal vegetables</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__f">
             <h4>Angus Beef Ribs</h4>
             <p>With mashed parsnips</p><span class="price">44€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">DESSERTS</p>
-        <div class="menu__items item__1">
+        <p class="category category__3">DESSERTS</p>
+        <div class="menu__items item__1 item__g">
             <h4>Assorted Dessert Plate</h4>
             <p>Chef's choice</p><span class="price">18€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__h">
             <h4>Creme brulee</h4>
             <p>Revisited</p><span class="price">22€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__i">
             <h4>Tiramisu</h4>
             <p>With hazelnuts</p><span class="price">23€</span>
             <div class="tick">
