--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -22,73 +22,74 @@
     <main class="menu">
         <h2>The Enchanted Plate</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
-        <p class="category">ENTREES</p>
-        <div class="menu__items item__1">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <p class="category category__1">ENTREES</p>
+        <div class="menu__items item__1 item__a">
             <h4>Foie Gras Ravioli</h4>
             <p>With truffle cream</p><span class="price">25€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__b">
             <h4>Oscietra Caviar</h4>
             <p>With buckwheat blinis</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__c">
             <h4>Lobster and Leek Foam</h4>
             <p>Marinated with orange zest</p><span class="price">20€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__4">
+        <div class="menu__items item__4 item__j">
             <h4>Duck Foie Gras</h4>
             <p>With fig jam and grilled baguette</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">MAIN DISH</p>
-        <div class="menu__items item__1">
+        <p class="category category__2">MAIN DISH</p>
+        <div class="menu__items item__1 item__d">
             <h4>Fresh Buttered Scallops</h4>
             <p>With white celery puree</p><span class="price">40€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__e">
             <h4>Pan-Fried Lobster</h4>
             <p>With mashed sweet potatoes</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__f">
             <h4>Braised Ox Tail</h4>
             <p>With wild rice and lemon zest</p><span class="price">44€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">DESSERTS</p>
-        <div class="menu__items item__1">
+        <p class="category category__3">DESSERTS</p>
+        <div class="menu__items item__1 item__g">
             <h4>Chocolate and Hazelnut Macaroon</h4>
             <p>With caramel butter ice cream</p><span class="price">18€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__h">
             <h4>Baba au rhum</h4>
             <p>With lemon drizzle</p><span class="price">22€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__i">
             <h4>Lemon Meringue Pie</h4>
             <p>Destructed</p><span class="price">23€</span>
             <div class="tick">
