--- a/bastille.html
+++ b/bastille.html
@@ -22,66 +22,67 @@
     <main class="menu">
         <h2>Bastille</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
-        <p class="category">ENTREES</p>
-        <div class="menu__items item__1">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <p class="category category__1">ENTREES</p>
+        <div class="menu__items item__1 item__a">
             <h4>Citrus Squid Carpaccio</h4>
             <p>With orange zest</p><span class="price">25€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__b">
             <h4>Grandmother's Vegetable Soup</h4>
             <p>Carrots, pasnips, Jerusalem artichoke</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__c">
             <h4>Onion Soup</h4>
             <p>Revisted</p><span class="price">20€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">MAIN DISH</p>
-        <div class="menu__items item__1">
+        <p class="category category__2">MAIN DISH</p>
+        <div class="menu__items item__1 item__d">
             <h4>Scallops</h4>
             <p>With mashed parsnip</p><span class="price">40€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__e">
             <h4>Magret de canard</h4>
             <p>With mashed potatoes</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__f">
             <h4>Game Hen</h4>
             <p>With vegetable gnocchis</p><span class="price">44€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">DESSERTS</p>
-        <div class="menu__items item__1">
+        <p class="category category__3">DESSERTS</p>
+        <div class="menu__items item__1 item__g">
             <h4>Floral Ice Cream</h4>
             <p>With hazelnut butter</p><span class="price">18€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__h">
             <h4>Chocolate Lava Cake</h4>
             <p>Revisited</p><span class="price">22€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__i">
             <h4>Napolean</h4>
             <p>With blueberries and marzipan</p><span class="price">23€</span>
             <div class="tick">
