--- a/index.html
+++ b/index.html
@@ -46,35 +46,40 @@
     </section>
     <main>
         <h3>Restaurants</h3>
-        <a href="the_full_palette.html" class="restaurant">
+        <a href="the_full_palette.html" class="restaurant restaurant-1">
             <img src="/ohmyfood-files/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="meal">
             <h4>The Full Palette</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
-            <!-- <i class="fa fa-heart" aria-hidden="true"></i> -->
+            <i class="fa fa-heart" aria-hidden="true"></i>
             <span>New</span>
         </a>
-        <a href="the_enchanted_plate.html" class="restaurant">
+        <a href="the_enchanted_plate.html" class="restaurant restaurant-2">
             <img src="/ohmyfood-files/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="meal">
             <h4>The Enchanted Plate</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <i class="fa fa-heart" aria-hidden="true"></i>
             <span>New</span>
         </a>
-        <a href="bastille.html" class="restaurant">
+        <a href="bastille.html" class="restaurant restaurant-3">
             <img src="/ohmyfood-files/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="meal">
             <h4>Bastille</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <i class="fa fa-heart" aria-hidden="true"></i>
         </a>
-        <a href="le_gourmand.html" class="restaurant">
+        <a href="le_gourmand.html" class="restaurant restaurant-4">
             <img src="/ohmyfood-files/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="meal">
             <h4>Le Gourmand</h4>
             <p>New York</p>
             <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <i class="fa fa-heart" aria-hidden="true"></i>
         </a>
     </main>
-    <!-- <div class="loader"></div> -->
+    <div class="spinner-background">
+        <div class="loader"></div>
+    </div>
     <footer>
         <span>ohmyfood</span>
         <ul>
