--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -22,66 +22,67 @@
     <main class="menu">
         <h2>The Full Palette</h2>
         <i class="fa fa-heart-o" aria-hidden="true"></i>
-        <p class="category">ENTREES</p>
-        <div class="menu__items item__1">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <p class="category category__1">ENTREES</p>
+        <div class="menu__items item__1 item__a">
             <h4>Escargot</h4>
             <p>With southern French spices</p><span class="price">25€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__b">
             <h4>Duck Foie Gras</h4>
             <p>With black truffle shavings</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__c">
             <h4>Fried egg</h4>
             <p>Seasonned with truffle cream annd vegetable</p><span class="price">20€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">MAIN DISH</p>
-        <div class="menu__items item__1">
+        <p class="category category__2">MAIN DISH</p>
+        <div class="menu__items item__1 item__d">
             <h4>Herb-Encrusted Steak</h4>
             <p>With delicately sliced and seasoned vegetable<p><span class="price">40€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__e">
             <h4>Ox Tail Shepard's Pie</h4>
             <p>With black truffle and pureed parsnips</p><span class="price">35€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__f">
             <h4>Filet of Sole</h4>
             <p>With citrus dressing</p><span class="price">44€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <p class="category">DESSERTS</p>
-        <div class="menu__items item__1">
+        <p class="category category__3">DESSERTS</p>
+        <div class="menu__items item__1 item__g">
             <h4>Paris-Brest</h4>
             <p>Revisted</p><span class="price">18€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__2">
+        <div class="menu__items item__2 item__h">
             <h4>Chocolate Macaroons</h4>
             <p>With vanilla ice cream</p><span class="price">22€</span>
             <div class="tick">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="menu__items item__3">
+        <div class="menu__items item__3 item__i">
             <h4>Chocolate Mousse</h4>
             <p>With spices and black truffle</p><span class="price">23€</span>
             <div class="tick">
