changed class name for section, spinner backgroud and menu item wrap with eclipses

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <header>
         <img src="ohmyfood-files/images/logo/ohmyfood.png" alt="ohmyfood-logo">
     </header>   
-    <section class="section">
-        <div class="section__location">
+    <section class="info">
+        <div class="info__location">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
         <p>Paris, Belleville</p>
         </div>
-        <div class="section__explore">
+        <div class="info__explore">
             <h3>Book the menu you like</h3>
             <p>Discover top-of-the-art restaurants we picked for you</p>
             <button class="btn"> Explore our restaurants</button>
         </div>
     </section>
-    <section class="section__guide">
+    <section class="guide">
         <h3>How it works</h3>
         <div class="step">
             <p>1</p>
